// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly DESKTOP 1`] = `
<div
  className="HeaderCatalog-root-1"
>
  <div
    className="HeaderCatalog-catalogUserBlock-2"
  >
    <p
      className="HeaderCatalog-catalogUserHello-3"
    >
       Hello, Ben A 
      <br />
      <span
        className="HeaderCatalog-catalogUserVerification-5"
      >
        KYC VERIFICATED
      </span>
    </p>
    <div
      className="HeaderCatalog-catalogUserPhoto-7"
    >
      <img
        alt=""
        src="user.png"
      />
    </div>
    <p
      className="HeaderCatalog-catalogUserBallance-4"
    >
       764.23 DCB 
      <br />
      <span
        className="HeaderCatalog-catalogUserBallDescr-6"
      >
        YOUR BALANCE
      </span>
    </p>
  </div>
</div>
`;

exports[`renders correctly MOBILE 1`] = `
<div
  className="HeaderCatalog-root-20"
>
  <div
    className="HeaderCatalog-catalogUserBlock-21"
  >
    <p
      className="HeaderCatalog-catalogUserHello-22"
    >
       Hello, Ben A 
      <br />
      <span
        className="HeaderCatalog-catalogUserVerification-24"
      >
        KYC VERIFICATED
      </span>
    </p>
    <div
      className="HeaderCatalog-catalogUserPhoto-26"
    >
      <img
        alt=""
        src="user.png"
      />
    </div>
    <p
      className="HeaderCatalog-catalogUserBallance-23"
    >
       764.23 DCB 
      <br />
      <span
        className="HeaderCatalog-catalogUserBallDescr-25"
      >
        YOUR BALANCE
      </span>
    </p>
  </div>
</div>
`;
